@@ -533,6 +533,7 @@ if (QT_QTDBUS_FOUND)
         qt5_add_dbus_adaptor(CANTATA_SRCS dbus/${PROJECT_REV_URL}.xml gui/mainwindow.h MainWindow)
         qt5_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.Notifications.xml)
         qt5_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.UPower.xml)
+        qt5_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.login1.xml)
         qt5_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.xml)
         qt5_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.MediaKeys.xml)
         qt5_add_dbus_interfaces(CANTATA_SRCS dbus/org.kde.Solid.PowerManagement.PolicyAgent.xml)
@@ -550,6 +551,7 @@ if (QT_QTDBUS_FOUND)
 
         if (NOT ENABLE_KDE)
             qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.UPower.xml)
+            qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.login1.xml)
             qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.xml)
             qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.MediaKeys.xml)
         endif (NOT ENABLE_KDE)
