@@ -1,0 +1,198 @@
+<!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN"
+"http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
+<node>
+ <interface name="org.freedesktop.login1.Manager">
+  <method name="GetSession">
+   <arg name="id" type="s" direction="in"/>
+   <arg name="session" type="o" direction="out"/>
+  </method>
+  <method name="GetSessionByPID">
+   <arg name="pid" type="u" direction="in"/>
+   <arg name="session" type="o" direction="out"/>
+  </method>
+  <method name="GetUser">
+   <arg name="uid" type="u" direction="in"/>
+   <arg name="user" type="o" direction="out"/>
+  </method>
+  <method name="GetUserByPID">
+   <arg name="pid" type="u" direction="in"/>
+   <arg name="user" type="o" direction="out"/>
+  </method>
+  <method name="GetSeat">
+   <arg name="id" type="s" direction="in"/>
+   <arg name="seat" type="o" direction="out"/>
+  </method>
+<!--
+  <method name="ListSessions">
+   <arg name="sessions" type="a(susso)" direction="out"/>
+  </method>
+  <method name="ListUsers">
+   <arg name="users" type="a(uso)" direction="out"/>
+  </method>
+  <method name="ListSeats">
+   <arg name="seats" type="a(so)" direction="out"/>
+  </method>
+  <method name="CreateSession">
+   <arg name="uid" type="u" direction="in"/>
+   <arg name="leader" type="u" direction="in"/>
+   <arg name="service" type="s" direction="in"/>
+   <arg name="type" type="s" direction="in"/>
+   <arg name="class" type="s" direction="in"/>
+   <arg name="seat" type="s" direction="in"/>
+   <arg name="vtnr" type="u" direction="in"/>
+   <arg name="tty" type="s" direction="in"/>
+   <arg name="display" type="s" direction="in"/>
+   <arg name="remote" type="b" direction="in"/>
+   <arg name="remote_user" type="s" direction="in"/>
+   <arg name="remote_host" type="s" direction="in"/>
+   <arg name="scope_properties" type="a(sv)" direction="in"/>
+   <arg name="id" type="s" direction="out"/>
+   <arg name="path" type="o" direction="out"/>
+   <arg name="runtime_path" type="o" direction="out"/>
+   <arg name="fd" type="h" direction="out"/>
+   <arg name="seat" type="s" direction="out"/>
+   <arg name="vtnr" type="u" direction="out"/>
+   <arg name="existing" type="b" direction="out"/>
+  </method>
+-->
+  <method name="ReleaseSession">
+   <arg name="id" type="s" direction="in"/>
+  </method>
+  <method name="ActivateSession">
+   <arg name="id" type="s" direction="in"/>
+  </method>
+  <method name="ActivateSessionOnSeat">
+   <arg name="id" type="s" direction="in"/>
+   <arg name="seat" type="s" direction="in"/>
+  </method>
+  <method name="LockSession">
+   <arg name="id" type="s" direction="in"/>
+  </method>
+  <method name="UnlockSession">
+   <arg name="id" type="s" direction="in"/>
+  </method>
+  <method name="LockSessions"/>
+  <method name="UnlockSessions"/>
+  <method name="KillSession">
+   <arg name="id" type="s" direction="in"/>
+   <arg name="who" type="s" direction="in"/>
+   <arg name="signal" type="s" direction="in"/>
+  </method>
+  <method name="KillUser">
+   <arg name="uid" type="u" direction="in"/>
+   <arg name="signal" type="s" direction="in"/>
+  </method>
+  <method name="TerminateSession">
+   <arg name="id" type="s" direction="in"/>
+  </method>
+  <method name="TerminateUser">
+   <arg name="uid" type="u" direction="in"/>
+  </method>
+  <method name="TerminateSeat">
+   <arg name="id" type="s" direction="in"/>
+  </method>
+  <method name="SetUserLinger">
+   <arg name="uid" type="u" direction="in"/>
+   <arg name="b" type="b" direction="in"/>
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="AttachDevice">
+   <arg name="seat" type="s" direction="in"/>
+   <arg name="sysfs" type="s" direction="in"/>
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="FlushDevices">
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="PowerOff">
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="Reboot">
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="Suspend">
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="Hibernate">
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="HybridSleep">
+   <arg name="interactive" type="b" direction="in"/>
+  </method>
+  <method name="CanPowerOff">
+   <arg name="result" type="s" direction="out"/>
+  </method>
+  <method name="CanReboot">
+   <arg name="result" type="s" direction="out"/>
+  </method>
+  <method name="CanSuspend">
+   <arg name="result" type="s" direction="out"/>
+  </method>
+  <method name="CanHibernate">
+   <arg name="result" type="s" direction="out"/>
+  </method>
+  <method name="CanHybridSleep">
+   <arg name="result" type="s" direction="out"/>
+  </method>
+  <method name="Inhibit">
+   <arg name="what" type="s" direction="in"/>
+   <arg name="who" type="s" direction="in"/>
+   <arg name="why" type="s" direction="in"/>
+   <arg name="mode" type="s" direction="in"/>
+   <arg name="fd" type="h" direction="out"/>
+  </method>
+<!--
+  <method name="ListInhibitors">
+   <arg name="inhibitors" type="a(ssssuu)" direction="out"/>
+  </method>
+-->
+  <signal name="SessionNew">
+   <arg name="id" type="s"/>
+   <arg name="path" type="o"/>
+  </signal>
+  <signal name="SessionRemoved">
+   <arg name="id" type="s"/>
+   <arg name="path" type="o"/>
+  </signal>
+  <signal name="UserNew">
+   <arg name="uid" type="u"/>
+   <arg name="path" type="o"/>
+  </signal>
+  <signal name="UserRemoved">
+   <arg name="uid" type="u"/>
+   <arg name="path" type="o"/>
+  </signal>
+  <signal name="SeatNew">
+   <arg name="id" type="s"/>
+   <arg name="path" type="o"/>
+  </signal>
+  <signal name="SeatRemoved">
+   <arg name="id" type="s"/>
+   <arg name="path" type="o"/>
+  </signal>
+  <signal name="PrepareForShutdown">
+   <arg name="active" type="b"/>
+  </signal>
+  <signal name="PrepareForSleep">
+   <arg name="active" type="b"/>
+  </signal>
+  <property name="NAutoVTs" type="u" access="read"/>
+  <property name="KillOnlyUsers" type="as" access="read"/>
+  <property name="KillExcludeUsers" type="as" access="read"/>
+  <property name="KillUserProcesses" type="b" access="read"/>
+  <property name="IdleHint" type="b" access="read"/>
+  <property name="IdleSinceHint" type="t" access="read"/>
+  <property name="IdleSinceHintMonotonic" type="t" access="read"/>
+  <property name="BlockInhibited" type="s" access="read"/>
+  <property name="DelayInhibited" type="s" access="read"/>
+  <property name="InhibitDelayMaxUSec" type="t" access="read"/>
+  <property name="HandlePowerKey" type="s" access="read"/>
+  <property name="HandleSuspendKey" type="s" access="read"/>
+  <property name="HandleHibernateKey" type="s" access="read"/>
+  <property name="HandleLidSwitch" type="s" access="read"/>
+  <property name="IdleAction" type="s" access="read"/>
+  <property name="IdleActionUSec" type="t" access="read"/>
+  <property name="PreparingForShutdown" type="b" access="read"/>
+  <property name="PreparingForSleep" type="b" access="read"/>
+ </interface>
+</node>
