@@ -28,6 +28,7 @@
 19. Add an option for 64 bit non KDE linux builds to install helper apps to
     lib64 instead of just lib. Pass -DUSE_LIB64_FOR_HELPERS=ON to cmake.
 20. In tag editor, only mark rating as changed if it has been.
+21. For Linux non-KDE builds, use login1 interface to detect system resuming.
 
 1.5.1
 -----
